test/conformance/chainsaw/validating-policies/context/userinfo/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: my-blocked-configmap
data:
  key: "value"
